# DS-capstone-pt1

./: .gitignore  README.md  pm25_lead_ozone_postcollection.ipynb  pm25_ozone_lead_analysis.ipynb  pm25_ozone_lead_analysis_final.ipynb  requirements.txt
code/: README.md  requirements.txt  requirements_dev.txt  setup.cfg
code/dsci592.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/src/: __init__.py
code/src/dsci592/: covid_collector.py  model.py
code/src/dsci592.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: README.md
data/censusData/: bu.py  censusData.csv
data/covid/: covid_data_df.pkl
data/golden/: dataJoin.ipynb  dataJoin.py  feeFiFoFum.pbz2  feeFiFoFum.pkl
data/no2/: daily_no2_Slim_AVG.csv
data/pm25/: daily_pm25_Slim_AVG.csv  harvard_avg_pm25.csv
experiments/EF/: 592_EDA.ipynb  592_feature_selection.ipynb  592_features.ipynb  592_roundOne_EF.ipynb  592_roundTwo2_EF.ipynb  592_roundTwo_EF.ipynb
experiments/EF_eda_baseline/: 592_roundOne_EF.ipynb
experiments/avk/: avk_discovery.ipynb  avk_discovery_bug_found.ipynb  avk_discovery_fixing_bug.ipynb  avk_discovery_verification.ipynb  catagorized_columns.txt  discovery.ipynb  geolocation_processing.ipynb  lstm_model.py  model.py  preprocessing.py  training_models.ipynb
experiments/embeddings/: location_embedding.ipynb
experiments/noah/: baseline-rapids.ipynb  baseline.ipynb  baseline1.csv  discovery-2.ipynb  discovery-rapids.ipynb  discovery.ipynb  discovery_module.ipynb  location_embedding.ipynb  preprocessing.py  presentation.ipynb  tensorboard.ipynb  tests.ipynb
(+26619 files in other folders)
