[metadata]
name = dsci592
version = 0.0.1
author = DSCI Dream Team
author_email = noah.krieger@drexel.edu
description = Covid module for DSCI592
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FuzzyPhoton/DS-capstone-pt1
project_urls =
    Bug Tracker = https://github.com/FuzzyPhoton/DS-capstone-pt1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
